--- a/.env
+++ b/.env
@@ -1,7 +1,5 @@
-VITE_APPWRITE_URL = "https://cloud.appwrite.io/v1"
-VITE_APPWRITE_DATABASE_ID = "6794a9b000193de69640"
-VITE_APPWRITE_COLLECTION_ID = "6794aa02000958acae7d"
-VITE_APPWRITE_PROJECT_ID = "6794a7ae001c9afeb69a"
-VITE_APPWRITE_BUCKET_ID= "6794ae7c000b3bad50a5"
-
-# MONGO_URI ="mongodb+srv://rahul:12345@cluster0.6tqsppp.mongodb.net/"///////
+VITE_APPWRITE_URL = "url"
+VITE_APPWRITE_DATABASE_ID = "Database_id"
+VITE_APPWRITE_COLLECTION_ID = "collection_id"
+VITE_APPWRITE_PROJECT_ID = "project_id"
+VITE_APPWRITE_BUCKET_ID= "bucket_id"
