--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,6 @@
-VITE_APPWRITE_URL = "https://cloud.appwrite.io/v1"
-VITE_APPWRITE_DATABASE_ID = "6794a9b000193de69640"
-VITE_APPWRITE_COLLECTION_ID = "6794aa02000958acae7d"
-VITE_APPWRITE_PROJECT_ID = "6794a7ae001c9afeb69a"
-VITE_APPWRITE_BUCKET_ID= "6794ae7c000b3bad50a5"
+VITE_APPWRITE_URL = "url"
+VITE_APPWRITE_DATABASE_ID = "DB_id"
+VITE_APPWRITE_COLLECTION_ID = "C_id"
+VITE_APPWRITE_PROJECT_ID = "P_ID"
+VITE_APPWRITE_BUCKET_ID= "B_id"
 
